--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,14 +1,16 @@
-site_name: obsidian-mkdocs template
+site_name: Seed
 
 theme:
     name: 'material'
+    logo: assets/logo/favicons.png
+    favicon: assets/logo/favicons.png
     palette:
 
     # Light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: pink
-      accent: indigo
+      primary: teal
+      accent: light blue
       toggle:
         icon: material/toggle-switch-off-outline
         name: Switch to dark mode
@@ -16,20 +18,34 @@ theme:
     # Dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: pink
-      accent: blue
+      primary: blue
+      accent: indigo
       toggle:
         icon: material/toggle-switch
         name: Switch to light mode
-
+    features:
+        - navigation.indexes
+        - navigation.top
 # Extensions
 markdown_extensions:
   - footnotes
+  - nl2br
   - attr_list
-  - pymdownx.arithmatex
+  - sane_lists
+  - meta
+  - smarty
+  - tables
+  - mdx_breakless_lists
+  - pymdownx.arithmatex:
+      generic: true
   - pymdownx.superfences
   - pymdownx.details
   - pymdownx.magiclink
+  - pymdownx.critic
+  - pymdownx.caret
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.tilde
   - pymdownx.tasklist:
        custom_checkbox: true
   - pymdownx.emoji:
@@ -39,4 +55,15 @@ markdown_extensions:
       permalink: true
 plugins:
   - search
-  - roamlinks   
+  - roamlinks
+  - mermaid2
+extra_javascript:
+  - assets/js/mathjax.js
+  - assets/js/utils.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+extra_css:
+    - assets/css/img-grids-floats.css
+    - assets/css/utils.css
+extra:
+  generator: false
