--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,12 @@
 site_name: Seed
+site_description: "A little owl"
+site_url:
 
 theme:
     name: 'material'
     logo: assets/logo/favicons.png
     favicon: assets/logo/favicons.png
+    custom_dir: overrides
     palette:
 
     # Light mode
