--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Seed
 site_description: "A little owl"
-site_url: https://mara-li.github.io/Seed_publish/
+site_url: https://www.mara-li.fr/
 
 theme:
     name: 'material'
