--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,7 +64,7 @@ markdown_extensions:
       custom_fences:
         - name: dataview
           class: dataview
-          format: !!python/name:pymdownx.superfences.fence_code_format
+          format: !!python/name:pymdownx.superfences.fence_div_format
         - name: mermaid
           class: mermaid
           format: !!python/name:mermaid2.fence_mermaid
