--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,10 @@ theme:
     logo: assets/logo/favicons.png
     favicon: assets/logo/favicons.png
     custom_dir: overrides
+    font:
+        text: Karla
+        code: Ubuntu Mono
+    language: fr
     palette:
 
     # Light mode
@@ -29,6 +33,8 @@ theme:
     features:
         - navigation.indexes
         - navigation.top
+        - navigation.tabs
+        - navigation.tabs.sticky
 # Extensions
 markdown_extensions:
   - footnotes
