update blog with plugin

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,6 +80,7 @@ plugins:
   - mermaid2
   - awesome-pages
   - tooltipster-links
+  - embed_file
 extra_javascript:
   - assets/js/mathjax.js
   - assets/js/utils.js
