--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,7 @@ theme:
     favicon: assets/logo/favicons.png
     custom_dir: overrides
     font:
-        text: Karla
+        text: Quicksand
         code: Ubuntu Mono
     language: fr
     palette:
