--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ mkdocs-awesome-pages-plugin
 mdx_breakless_lists
 git+https://github.com/Mara-Li/mkdocs-tooltipster-links-plugin
 mkdocs-embed-file-plugins
+git+https://github.com/neurobin/mdx_wikilink_plus/
