--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.x
-      - run: python3 -m pip install --upgrade pip
-      - run: pip install -r requirements.txt
+          python-version: 3.10
+      - name: Install Python dependencies
+        uses: py-actions/py-dependency-install@v3
+        with: 
+          path: requirements.txt
       - run: mkdocs gh-deploy --force
