--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,7 @@ markdown_extensions:
   - pymdownx.keys
   - pymdownx.mark
   - pymdownx.tilde
+  - markdown.extensions.md_in_html
   - pymdownx.highlight:
       use_pygments: true
       anchor_linenums: true
@@ -71,9 +72,13 @@ markdown_extensions:
         - name: dataview
           class: dataview
           format: !!python/name:pymdownx.superfences.fence_div_format
+        - name: agtable
+          class: agtable
+          format: !!python/name:mkdocs_custom_fences.md_render.md_sub_render
         - name: mermaid
           class: mermaid
           format: !!python/name:mermaid2.fence_mermaid
+      preserve_tabs: true
 plugins:
   - search
   - ezlinks:
