--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ mdx_breakless_lists
 mkdocs-preview-links-plugin
 mkdocs-embed-file-plugins
 Markdown
+git+https://github.com/Mara-Li/mkdocs_custom_fences
