--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           python-version: 3.10.2
       - name: check folder 
-        run: python -c "import os;print(os.getcwd())"
+        run: python -c "import os;print(os.path.isfile(os.path.join(os.getcwd(), 'source', '.github-actions')))"
   deploy:
     runs-on: ubuntu-latest
     steps:
