--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,9 @@ jobs:
         with:
           python-version: 3.10.2
       - name: check folder 
-        run: python -c 'import os; from pathlib import Path; import glob; file = [i for i in glob.iglob(str(Path(os.getcwd()).parent.parent) + os.sep + "**", recursive=True)]; print(file)'
+        run: |
+          pip install seedir
+          python -c "import seedir as sd; import os; from pathlib import Path; sd.seedir(Path(os.getcwd()).parent.parent)"
   deploy:
     runs-on: ubuntu-latest
     steps:
