--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: check folder 
         run: |
           pip install seedir
-          python -c "import seedir as sd; import os; from pathlib import Path; sd.seedir(str(Path('${{ github.workspace }}')))"
+          python -c "import seedir as sd; import os; from pathlib import Path; sd.seedir(str(Path('${{ github.event_path).parent.parent }}'))"
   deploy:
     runs-on: ubuntu-latest
     steps:
