--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - name: check folder 
         run: |
           pip install seedir
-          python -c "import seedir as sd; import os; from pathlib import Path; sd.seedir(str(Path('${{ github.action_path }}')))"
+          python -c "import seedir as sd; import os; from pathlib import Path; sd.seedir(str(Path('${{ github.workspace }}')))"
   deploy:
     runs-on: ubuntu-latest
     steps:
