--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
       - master
       - main
 jobs:
-  python-working:
+  obs2mk:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -15,7 +15,6 @@ jobs:
       - name: check folder 
         run: |
           pip install git+https://github.com/Mara-Li/mkdocs_obsidian_publish.git@github-actions
-          cd source
           obs2mk --GA file testing.md
   deploy:
     runs-on: ubuntu-latest
