--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - name: check folder 
         run: |
           pip install git+https://github.com/Mara-Li/mkdocs_obsidian_publish.git@github-actions
-          for f in {{$ github.workspace}}/source/*
+          for f in ${{ github.workspace}}/source/*
           do
             obs2mk --GA --keep file $f
           done
