--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,13 +12,19 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: 3.10.2
-      - name: check folder 
+      - name: obs2mk source files
         run: |
           pip install git+https://github.com/Mara-Li/mkdocs_obsidian_publish.git@github-actions
           for f in ${{ github.workspace}}/source/*
           do
             obs2mk --GA --keep file $f
           done
+      - name: Push new files
+        run: |
+          git config --global user.name 'mara-li'
+          git config --global user.email 'mara-li@users.noreply.github.com'
+          git commit -am "Updated blog 🎉"
+          git push
   deploy:
     runs-on: ubuntu-latest
     steps:
