--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           git config --global user.name 'mara-li'
           git config --global user.email 'mara-li@users.noreply.github.com'
+          git add . 
           git commit -am "Updated blog 🎉"
           git push
 
