--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,10 @@ jobs:
           pip install git+https://github.com/Mara-Li/mkdocs_obsidian_publish.git@github-actions
           for f in ${{ github.workspace}}/source/*
           do
-            obs2mk --GA --keep file $f
+            if [[ "$f" == *md]] 
+            then
+              obs2mk --GA --keep file $f
+            fi
           done
       - name: clean source files
         run: rm ${{github.workspace}}/source/*
