--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,14 +4,30 @@ on:
     branches:
       - master
       - main
+
 jobs:
+  path-filter:
+    runs-on: ubuntu-latest
+    outputs:
+      output1: ${{ steps.filter.outputs.sources }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          filters: |
+            sources:
+              - 'source/**'
   obs2mk:
     runs-on: ubuntu-latest
+    needs: path-filter
+    if: needs.path-filter.outputs.output1 == 'true'
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
           python-version: 3.10.2
+  
       - name: obs2mk source files
         run: |
           pip install git+https://github.com/Mara-Li/mkdocs_obsidian_publish.git@github-actions
@@ -19,7 +35,7 @@ jobs:
           do
             if [[ "$f" == *md ]] 
             then
-              obs2mk --GA --keep file $f
+              obs2mk --GA --keep file "$f"
             fi
           done
           obs2mk --GA clean
