--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: ci
 on:
   workflow_dispatch
-  
+
 jobs:
   obs2mk:
     runs-on: ubuntu-latest
@@ -13,7 +13,7 @@ jobs:
   
       - name: obs2mk source files
         run: |
-          pip install obs2mk
+          pip install git+https://github.com/Mara-Li/mkdocs_obsidian_publish.git@github-actions
           for f in ${{ github.workspace}}/source/*
           do
             echo $f
@@ -28,8 +28,8 @@ jobs:
       - name: Push new files
         run: |
           git pull
-          git config --global user.name 'mara-li'
-          git config --global user.email 'mara-li@users.noreply.github.com'
+          git config --global user.name 'github-actions'
+          git config --global user.email 'github-actions@users.noreply.github.com'
           git add . 
           git commit -am "Updated blog 🎉"
           git push
