--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,6 +75,9 @@ markdown_extensions:
         - name: agtable
           class: agtable
           format: !!python/name:mkdocs_custom_fences.md_render.md_sub_render
+        - name: folderv
+          class: folderv
+          format: !!python/name:pymdownx.superfences.fence_div_format
         - name: mermaid
           class: mermaid
           format: !!python/name:mermaid2.fence_mermaid
