--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,6 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: 3.10.2
-  
       - name: obs2mk source files
         run: |
           pip install obs2mk
@@ -30,8 +29,8 @@ jobs:
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions@users.noreply.github.com'
           git add . 
-          output=$(git status --porcelain | tr -d '\n' | tr -d 'M' |tr -d '??')
-          git commit -am "Updated with : ${output}"
+          fileList=$(git status --porcelain | tr -d '\n' | tr -d 'M' |tr -d '??')
+          git commit -am "🏓 Publishing from ObsidianMD\n ${fileList}"
           git push
       - name: Install Python dependencies
         uses: py-actions/py-dependency-install@v3
