--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,14 @@
-name: ci
+name: mkdocs conversion
 on:
   workflow_dispatch:
-  pull_request:
+  push:
     paths:
       - 'docs/**'
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: startsWith(github.event.head_commit.message, '[PUBLISHER]')
     steps:
       - uses: actions/checkout@v3
         with:
@@ -21,9 +22,13 @@ jobs:
         with:
           separator: ";"
           quotepath: "false"
+          since_last_remote_commit: true
       - name: Install OBS2Mk
         run: |
           pip install obs2mk --upgrade
+      - name: generate markdown
+        run: |
+          echo "File processed:  " >> $GITHUB_STEP_SUMMARY
       - name: obs2mk source files
         run: |
           IFS=$';'
@@ -31,6 +36,7 @@ jobs:
           for file in $changed; do
             if [[ "$file" == *md ]] 
               then
+                echo "- $file " >> $GITHUB_STEP_SUMMARY
                 obs2mk --minimal file "$file"
               fi
             done
@@ -49,3 +55,6 @@ jobs:
           fileList=$(git status --porcelain | tr -d '\n' | tr -d 'M' |tr -d '??')
           git commit -m "🏓 Publishing from ObsidianMD" -m "${fileList}"
           git push
+      - name: Ending summary
+        run: |
+          echo "🎉 Published to $PAGE_LINK" >> $GITHUB_STEP_SUMMARY
