--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,20 @@ jobs:
           fileList=$(git status --porcelain | tr -d '\n' | tr -d 'M' |tr -d '??')
           git commit -m "🏓 Publishing from ObsidianMD" -m "${fileList}"
           git push
+  ending:
+    runs-on: ubuntu-latest
+    needs: build
+    if: always() && (needs.build.result == 'failure')
+    steps: 
       - name: Ending summary
         run: |
-          echo "🎉 Published to $PAGE_LINK" >> $GITHUB_STEP_SUMMARY
+          echo "⚠️ Error during build!!! >> $GITHUB_STEP_SUMMARY
+  ending2:
+    runs-on: ubuntu-latest
+    needs: [build]
+    if: always() && (needs.build.result == 'success')
+    steps:
+      - name: ending summary
+        run: |
+          echo "🎉 Successfully converted files and build documentation" >> $GITHUB_STEP_SUMMARY
+    
