--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -1,2 +1,3 @@
-Mara-Li/obsidian-mkdocs-publisher-template:
-  - overrides/
+obsidianMkdocs/obsidian-mkdocs-publisher-template:
+  - source: overrides/
+    dest: overrides/
