--- a/.github/workflows/mkdocs_build.yml
+++ b/.github/workflows/mkdocs_build.yml
@@ -20,7 +20,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v3
         with:
-          python-version: 3.10.2
+          python-version: 3.10.4
+          cache: 'pip'
       - name: Install Python dependencies
         uses: py-actions/py-dependency-install@v3
         with: 
