--- a/.github/workflows/mkdocs_build.yml
+++ b/.github/workflows/mkdocs_build.yml
@@ -23,14 +23,11 @@ jobs:
           python-version: 3.10.4
           cache: 'pip'
       - name: Install Python dependencies
-        uses: py-actions/py-dependency-install@v3
-        with: 
-          path: requirements.txt
+        run: pip install -r requirements.txt
       - name: set locale
         run: |
           sudo apt-get update && sudo apt-get install tzdata locales -y
           sudo locale-gen ${{ secrets.LANGUAGE }}
-          language = ${{ secrets.LANGUAGE }}
-          setLocale="$language".utf8
+          setLocale="${{ secrets.LANGUAGE }}".utf8
           sudo update-locale LANG=$setLocale
       - run: mkdocs gh-deploy --force --clean
