--- a/.github/workflows/mkdocs_build.yml
+++ b/.github/workflows/mkdocs_build.yml
@@ -21,14 +21,12 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: 3.10.4
-          cache: 'pip'
       - name: Install Python dependencies
         run: pip install -r requirements.txt
       - name: set locale
         run: |
           sudo apt-get update && sudo apt-get install tzdata locales -y
-          sudo locale-gen ${{ secrets.LANGUAGE }}
+          sudo locale-gen fr
           lang="fr_FR.utf8"
-          setLocale="${{ secrets.LANGUAGE }}".utf8
           sudo update-locale LANG=$lang
       - run: mkdocs gh-deploy --force --clean
