--- a/.github/workflows/mkdocs_build.yml
+++ b/.github/workflows/mkdocs_build.yml
@@ -11,6 +11,7 @@ on:
       - 'docs/**'
       - 'mkdocs.yml'
       - 'requirements.txt'
+      - '.github/workflows/**'
 
 jobs:
   mkdocs:
@@ -21,12 +22,13 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: 3.10.4
+          cache: 'pip'
       - name: Install Python dependencies
         run: pip install -r requirements.txt
       - name: set locale
         run: |
           sudo apt-get update && sudo apt-get install tzdata locales -y
-          sudo locale-gen fr
-          lang="fr_FR.utf8"
+          sudo locale-gen ${{ secrets.LANGUAGE }}
+          lang="${{ secrets.LANGUAGE }}.UTF-8"
           sudo update-locale LANG=$lang
       - run: mkdocs gh-deploy --force --clean
