--- a/.github/workflows/mkdocs_build.yml
+++ b/.github/workflows/mkdocs_build.yml
@@ -30,6 +30,7 @@ jobs:
           sudo apt-get update && sudo apt-get install tzdata locales -y
           lang=$(head -n 1 .github/.env)
           sudo locale-gen $lang
+          locale -a | grep $lang
           langLocale="$lang.UTF-8"
           sudo update-locale LANG=$langLocale
       - run: mkdocs gh-deploy --force --clean
