--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,8 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-python@v3
         with:
-          python-version: 3.10.4
+          python-version: "3.10.4"
+          cache: pip
       - name: get changed files
         uses: tj-actions/changed-files@v23
         id: changed-files
