--- a/.github/workflows/mkdocs_build.yml
+++ b/.github/workflows/mkdocs_build.yml
@@ -29,6 +29,8 @@ jobs:
         run: |
           sudo apt-get update && sudo apt-get install tzdata locales -y
           lang=$(head -n 1 .github/.env)
+          upperL="${lang^^}"
+          newLang="$lang"_"upperL".UTF-8
           sudo locale-gen $lang
           locale -a | grep $lang
           sudo update-locale LANG=$lang
