--- a/.github/workflows/mkdocs_build.yml
+++ b/.github/workflows/mkdocs_build.yml
@@ -25,8 +25,6 @@ jobs:
         with:
           python-version: '3.10.4'
           cache: 'pip'
-          env:
-
       - name: Install Python dependencies
         run: pip install -r requirements.txt
       - name: set locale
@@ -34,10 +32,11 @@ jobs:
           sudo apt-get update && sudo apt-get install tzdata locales -y
           lang=$(head -n 1 .github/.env)
           upperL="${lang^^}"
-          newLang="$lang"_"$upperL".UTF-8
+          newLang="$lang"_"$upperL".utf8
           sudo locale-gen $newLang
           locale -a | grep $lang
           sudo update-locale LANG=$newLang
           sudo update-locale LC_ALL=$newLang
           export LC_ALL=$newLang
+          date
       - run: mkdocs gh-deploy --force --clean
