--- a/.github/workflows/mkdocs_build.yml
+++ b/.github/workflows/mkdocs_build.yml
@@ -27,6 +27,12 @@ jobs:
           cache: 'pip'
       - name: Install Python dependencies
         run: pip install -r requirements.txt
+      - name: get locale from env
+        id: localeEnv
+        run: |
+          lang=$(head -n 1 .github/.env)
+          upperL="${lang^^}"
+          newLang="$lang"_"$upperL".utf8 >> $GITHUB_ENV
       - name: set locale
         run: |
           sudo apt-get update && sudo apt-get install tzdata locales -y
@@ -37,6 +43,7 @@ jobs:
           locale -a | grep $lang
           sudo update-locale LANG=$newLang
           sudo update-locale LC_ALL=$newLang
-          export LC_ALL=$newLang
           date
       - run: mkdocs gh-deploy --force --clean
+        env:
+          LC_ALL: ${{ env.newLang }}
