--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,6 @@ on:
   push:
     paths:
       - 'docs/**'
-    branches: ['main', 'master']
 
 jobs:
   build:
@@ -14,10 +13,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v3
         with:
-          python-version: "3.10.4"
-          cache: pip
+          python-version: 3.10.4
       - name: get changed files
         uses: tj-actions/changed-files@v23
         id: changed-files
@@ -59,5 +57,4 @@ jobs:
           git push
       - name: Ending summary
         run: |
-          pageLink=$(head -n 2 .github/.env | tail -1)
           echo "🎉 Published to $PAGE_LINK" >> $GITHUB_STEP_SUMMARY
