--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
     if: startsWith(github.event.head_commit.message, '[PUBLISHER]')
     outputs:
       changed-files: ${{ steps.changed-files.outputs.all_changed_files }}
+      length-files: ${{ steps.lg_out.outputs.lg_files }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -24,11 +25,16 @@ jobs:
         with:
           separator: ";"
           quotepath: "false"
-          since_last_remote_commit: true          
+          since_last_remote_commit: true
+      - name: set lg outputs
+        id: lg_out
+        run: |
+          lg_steps=${#steps.changed-files.outputs.all_changed_files}
+          echo "::set-output name=lg_files::$lg_steps"
   installation: 
     runs-on: ubuntu-latest
     needs: [build]
-    if:  ${#needs.build.outputs.all_changed_files} > 0 
+    if:  needs.build.outputs.length-files > 0 
     steps:
       - name: Requirements
         run: |
