--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,15 +66,15 @@ jobs:
           fileList=$(git status --porcelain | tr -d '\n' | tr -d 'M' |tr -d '??')
           git commit -m "🏓 Publishing from ObsidianMD" -m "${fileList}"
           git push
-  ending_success:
+  sucess:
     runs-on: ubuntu-latest
-    needs: [installation, build]
+    needs: [installation]
     if: always() && (needs.installation.result == 'failure')
     steps: 
       - name: Ending summary
         run: |
           echo "⚠️ Error during build!!!" >> $GITHUB_STEP_SUMMARY
-  ending_failure:
+  failure:
     runs-on: ubuntu-latest
     needs: [installation]
     if: always() && (needs.installation.result == 'success')
@@ -84,11 +84,12 @@ jobs:
           LINK=$(head -n 1 .github/.env)
           echo "🎉 Successfully converted files and build documentation" >> $GITHUB_STEP_SUMMARY
           echo "Your blog is successfully build at $LINK" >> $GITHUB_STEP_SUMMARY
-  ending_nothing:
+  nothing:
     runs-on: ubuntu-latest
     needs: build
     if: needs.build.outputs.length-files == 0
     steps:
       - name: message
         run: |
+          echo "${{ needs.build.outputs.all_changed_files }}"
           echo "🤔 Nothing to commit, ending" >> $GITHUB_STEP_SUMMARY 
