--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
           changed=${{ needs.build.outputs.all_changed_files }}
           lg_steps=${#changed}
           echo "::set-output name=lg_files::$lg_steps"
+          echo "::set-output name=changed-files::$changed"
   installation: 
     runs-on: ubuntu-latest
     needs: [build]
