--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
           git push
   sucess:
     runs-on: ubuntu-latest
-    needs: [installation]
+    needs: [installation, build]
     if: always() && (needs.installation.result == 'failure')
     steps: 
       - name: Ending summary
@@ -77,7 +77,7 @@ jobs:
           echo "⚠️ Error during build!!!" >> $GITHUB_STEP_SUMMARY
   failure:
     runs-on: ubuntu-latest
-    needs: [installation]
+    needs: [installation, build]
     if: always() && (needs.installation.result == 'success')
     steps:
       - name: ending summary
