--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,14 +14,13 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - run: |
-          echo "# Building" >> $GITHUB_STEP_SUMMARY
       - name: get changed files
         uses: tj-actions/changed-files@v23
         id: changed-files
         with:
           separator: ";"
           quotepath: "false"
+          since_last_remote_commit: 'true'
       - name: set lg outputs
         id: lg_out
         run: |
