--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           separator: ";"
           quotepath: "false"
-          since_last_remote_commit: 'true'
+          since_last_remote_commit: "true"
       - name: set lg outputs
         id: lg_out
         run: |
