--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,11 @@ jobs:
     needs: [build]
     if:  needs.build.outputs.length-files > 0 
     steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.10.4'
+          cache: 'pip'
       - name: Requirements
         run: |
           pip install obs2mk --upgrade
