--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
       - name: obs2mk source files
         run: |
           IFS=$';'
-          changed="${{ needs.build.outputs.all_changed_files }}"
+          changed="${{ needs.build.outputs.changed-files.all_changed_files }}"
           for file in $changed; do
             if [[ "$file" == *md ]] 
               then
@@ -62,7 +62,7 @@ jobs:
       - name: Mkdocs build
         run: |
           mkdocs gh-deploy --force --clean
-      - name: Push updateds files
+      - name: Push updated files
         run: |
           git pull
           git config --global user.name 'github-actions'
