--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ jobs:
     outputs:
       changed-files: ${{ steps.changed-files.outputs.all_changed_files }}
       length-files: ${{ steps.lg_out.outputs.lg_files }}
+      page_link : ${{ steps.lg_out.outputs.page_link }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -26,10 +27,11 @@ jobs:
         run: |
           changed=${{ steps.changed-files.outputs.all_changed_files }}
           lg_steps=${#changed}
+          LINK=$(head -n 1 .github/.env)
           echo "$changed"
           echo "$lg_steps"
           echo "::set-output name=lg_files::$lg_steps"
-          echo "::set-output name=changed-files::$changed"
+          echo "::set-output name=page_link::$LINK"
   installation: 
     runs-on: ubuntu-latest
     needs: [build]
@@ -72,7 +74,7 @@ jobs:
           fileList=$(git status --porcelain | tr -d '\n' | tr -d 'M' |tr -d '??')
           git commit -m "🏓 Publishing from ObsidianMD" -m "${fileList}"
           git push
-  sucess:
+  on_failure:
     runs-on: ubuntu-latest
     needs: [installation, build]
     if: always() && (needs.installation.result == 'failure')
@@ -80,17 +82,17 @@ jobs:
       - name: Ending summary
         run: |
           echo "⚠️ Error during build!!!" >> $GITHUB_STEP_SUMMARY
-  failure:
+  on_success:
     runs-on: ubuntu-latest
     needs: [installation, build]
     if: always() && (needs.installation.result == 'success')
     steps:
       - name: ending summary
         run: |
-          LINK=$(head -n 1 .github/.env)
+          link="${{ needs.build.output.page_link }}"
           echo "🎉 Successfully converted files and build documentation" >> $GITHUB_STEP_SUMMARY
-          echo "Your blog is successfully build at $LINK" >> $GITHUB_STEP_SUMMARY
-  nothing:
+          echo "Your blog is successfully build at $link" >> $GITHUB_STEP_SUMMARY
+  on_nothing:
     runs-on: ubuntu-latest
     needs: build
     if: needs.build.outputs.length-files == 0
