--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -5,5 +5,5 @@ group:
   files:
     - source: overrides/
       dest: overrides/
-    - workflows/ci.yml
-    - mkdocs_build.yml
+    - .github/workflows/ci.yml
+    - .github/workflows/mkdocs_build.yml
