--- a/.github/workflows/manual_run.yml
+++ b/.github/workflows/manual_run.yml
@@ -14,18 +14,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.10.4'
-          cache: 'pip'
       - name: locate file
         run: |
-          files=$(find . -path "{{ github.event.inputs.file }}" -printf '%p:::' | sed 's/:::$/\n/')
-          IFS=$':::'
-          for file in $files; do
+          find . -path *.md
+          for file in $(find . -path "{{ github.event.inputs.file }}"); do
             echo "$file"
           done
-          unset IFS
 
 
 
