--- a/.github/workflows/manual_run.yml
+++ b/.github/workflows/manual_run.yml
@@ -16,7 +16,8 @@ jobs:
           fetch-depth: 0
       - name: locate file
         run: |
-          for i in $(find . -path "{{ inputs.file }}"); do
+          echo "${{ inputs.file }}"
+          for i in $(find . -path "${{ inputs.file }}"); do
             echo "$i"
           done
 
