--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -9,3 +9,4 @@ group:
     - .github/workflows/mkdocs_build.yml
     - .github/workflows/manual_run.yml
     - .github/workflows/update_requirements.yml
+    - requirements.txt
