--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -2,6 +2,7 @@ group:
   repos: |
     obsidianMkdocs/obsidian-mkdocs-publisher-template
     obsidianMkdocs/obsidian_mkdocs_publisher_docs
+    sandboxingRepo/obsidian-sandbox
   files:
     - source: overrides/
       dest: overrides/
