--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ docs/__pycache__/hooks.cpython*
 overrides/partials/__pycache__/hooks.*
 docs/assets/__pycache__/hooks.*
 __pycache__/**
+**/__pycache__/**
